# sanf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  impl-plan-v0.1.md  pyproject.toml
app/: __init__.py  connectors.py  iiif.py  main.py  settings.py
examples/: 01_standalone_server.py  02_embed_in_fastapi.py  03_s3_connector.py  04_gcs_connector.py  README.md
sanf/: __init__.py  connectors.py  main.py  settings.py
tests/: test_app.py
