[project]
name = "sanf"
version = "1.0.0"
description = "Infra-agnostic IIIF Image API 3.0 server built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["iiif", "image-api", "fastapi", "image-server", "iiif-image-api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[project.urls]
Repository = "https://github.com/RjChiba/sanf"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sanf*"]

[tool.pytest.ini_options]
pythonpath = ["."]
